I managed to not fail!!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.CarPool"
         tools:targetApi="31">
         <activity
+            android:name=".activiities.MainActivity.SecundaryActivity"
+            android:exported="false"
+            android:parentActivityName=".activiities.MainActivity.MainActivity"/>
+        <activity
             android:name=".activiities.AddVehicle"
             android:exported="false" />
         <activity
