--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,17 @@
         android:theme="@style/Theme.CarPool"
         tools:targetApi="31">
         <activity
+            android:name=".activiities.MainActivity.OwnedVehicles.OwnedVehicles"
+            android:exported="false"
+            android:parentActivityName=".activiities.MainActivity.OwnedVehicles.OwnedVehicles"/>
+        <activity
             android:name=".activiities.MainActivity.SecundaryActivity"
             android:exported="false"
-            android:parentActivityName=".activiities.MainActivity.MainActivity"/>
+            android:parentActivityName=".activiities.MainActivity.MainActivity" />
         <activity
             android:name=".activiities.AddVehicle"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".activiities.MainActivity.MainActivity"/>
         <activity
             android:name=".activiities.UserInfo"
             android:exported="false" />
